--- a/package.json
+++ b/package.json
@@ -18,5 +18,21 @@
   "bugs": {
     "url": "https://github.com/gdgmadrid/gdg-madrid/issues"
   },
+  "devDependencies": {
+    "del": "^2.2.0",
+    "eslint-plugin-html": "^1.5.0",
+    "gulp": "gulpjs/gulp#4.0",
+    "gulp-eslint": "^3.0.0",
+    "gulp-htmlmin": "^3.0.0",
+    "gulp-if": "^2.0.0",
+    "gulp-imagemin": "^3.0.0",
+    "gulp-uglify": "^2.0.0",
+    "merge-stream": "^1.0.0",
+    "polymer-build": "^0.4.0"
+  },
+  "scripts": {
+    "build": "gulp build",
+    "lint": "gulp lint"
+  },
   "homepage": "https://github.com/gdgmadrid/gdg-madrid#readme"
 }
