--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ deploy:
   - provider: firebase
     edge: true
     skip_cleanup: true
-    project: gdgmadrid
+    project: gdg-madrid
     token: $FIREBASE_TOKEN
     on:
       branch: master
