--- a/.travis.yml
+++ b/.travis.yml
@@ -12,13 +12,14 @@ branches:
 install:
   - npm install
   - npm install -g bower
+  - npm install -g polymer-cli
   - bower install
 before_script:
   - npm run lint
 script:
   - npm test
 before_deploy:
-  - npm run build
+  - polymer build
 deploy:
   - provider: firebase
     edge: true
