--- a/bower.json
+++ b/bower.json
@@ -1,21 +1,42 @@
 {
-  "name": "polymer-starter-kit",
+  "name": "gdgmadrid.com",
+  "description": "The GDG Madrid official website",
   "authors": [
-    "The Polymer Authors"
+    "Alberto Gutierrez Juanes <aljesusg@gmail.com> "
   ],
+  "homepage": "https://gdgmadrid.com",
+  "license": "https://gdgmadrid.com/LICENSE.txt",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/gdgmadrid/gdg-madrid.git"
+  },
   "dependencies": {
     "app-layout": "PolymerElements/app-layout#^0.10.0",
     "app-route": "PolymerElements/app-route#^0.9.0",
-    "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.0.0",
+    "app-storage": "PolymerElements/app-storage#^0.9.0",
+    "iron-ajax": "PolymerElements/iron-ajax#^1.2.0",
+    "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.3.0",
     "iron-icon": "PolymerElements/iron-icon#^1.0.0",
     "iron-iconset-svg": "PolymerElements/iron-iconset-svg#^1.0.0",
+    "iron-image": "PolymerElements/iron-image#^1.2.0",
     "iron-localstorage": "PolymerElements/iron-localstorage#^1.0.0",
     "iron-media-query": "PolymerElements/iron-media-query#^1.0.0",
     "iron-pages": "PolymerElements/iron-pages#^1.0.0",
-    "iron-selector": "PolymerElements/iron-selector#^1.0.0",
+    "iron-selector": "PolymerElements/iron-selector#^1.5.0",
+    "moment-element": "^0.4.0",
+    "neon-animation": "PolymerElements/neon-animation#^1.2.0",
+    "paper-button": "PolymerElements/paper-button#^1.0.0",
+    "paper-card": "PolymerElements/paper-card#~1.1.0",
     "paper-icon-button": "PolymerElements/paper-icon-button#~1.1.0",
-    "polymer": "Polymer/polymer#^1.6.0"
+    "paper-input": "PolymerElements/paper-input#^1.1.0",
+    "paper-styles": "PolymerElements/paper-styles#~1.1.0",
+    "paper-tabs": "PolymerElements/paper-tabs#~1.5.0",
+    "polymer": "Polymer/polymer#^1.6.0",
+    "polymerfire": "firebase/polymerfire#^0.9.0"
+  },
+  "resolutions": {
+    "app-storage": "patch-1"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
