--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "GDG Spain",
-  "short_name": "GDG Spain",
+  "name": "GDG Madrid",
+  "short_name": "GDG Madrid",
   "start_url": "/?homescreen=1",
   "display": "standalone",
   "theme_color": "#4285f4",
